# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: changer.py  configs.py  get_and_save.py  helpers.py  loader.py  modifier.py  saver.py
page_loader/scripts/: page_loader.py
tests/: test_data.py  test_exceptions.py  test_initial.py  test_resources.py  test_structure.py
tests/fixtures/: test1.html
