[tool.poetry]
name = "polymag-page-loader"
version = "0.1.2"
description = ""
authors = ["PolyMaG"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
